Moved navbar to always be visible. Fixed routing to allow multiple page display. Fixed up some css.

--- a/weather-app/client/src/components/Navbar/Navbar.css
+++ b/weather-app/client/src/components/Navbar/Navbar.css
@@ -2,3 +2,12 @@
     font-size: 1.75rem;
     cursor: pointer;
 }
+
+.navbar-main {
+    align-items: center;
+    background-color: #dadde9;
+    display: flex;
+    flex-direction: column;
+    height: 1rem;
+    width: 100%;
+}
